# opencv_testrepo

./: CMakeLists.txt  README.md  main.cpp
Basic_Filters_practice/: CMakeLists.txt  Filters.cpp  Filters.h  main.cpp
De_Mosaicing/: CMakeLists.txt  demosaicing_nearest_neighbor.cpp  demosaicing_nearest_neighbor.h  main.cpp
Demosaicing/: .gitignore
Demosaicing_closest/: CMakeLists.txt  main.cpp
demosaicing_Closest_working/: CMakeLists.txt  Filters.cpp  Filters.h  main.cpp
